Improve width/height popup
https://github.com/Juicy/juicy-tile-editor/issues/67

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -182,6 +182,7 @@
     </style>
 
       <juicy-tile-editor-form id="form"
+                              editor="{{editor}}"
                               selecteditems="{{selectedItems}}"
                               editedtiles="{{editedTiles}}"
                               tilelists="{{tileLists}}"
