--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 <link rel="import" href="juicy-border-picker.html" />
 
-<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists modified">
+<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists modified editor">
     <template>
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <style>
@@ -79,7 +79,9 @@
                 box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
                 padding: 5px;
                 max-width: 144px;
+                min-width: 100px;
                 white-space: normal;
+                color: black;
             }
 
             .expandable.wide {
@@ -94,6 +96,12 @@
 
             .drop-down .expandable {
                 max-width: none;
+            }
+
+            .expandable .description {
+                font-size: 13px;
+                padding-left: 5px;
+                margin-top: 5px;
             }
 
             .sourceActions {
@@ -208,15 +216,17 @@
 
             .button-column {
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
+                flex-wrap: wrap;
             }
 
             .button-column button {
                 margin-top: 4px;
+                width: 70px;
             }
 
-            .button-column button:first-child {
-                margin-top: 0;
+            .button-column button:nth-child(odd) {
+                margin-right: 4px;
             }
 
             .drop-down {
@@ -467,13 +477,18 @@
                         <div class="expandable">
                             <button class="editable" on-click="{{widthIncrease}}" disabled?="{{widthAuto}}">+</button>
                             <button class="editable" on-click="{{widthDecrease}}" disabled?="{{widthAuto}}">-</button>
-                            <label class="editable"><input id="widthAutoCheckbox" type="checkbox" data-applyvalue="widthAuto" checked="{{widthAuto}}"> auto</label>
+                            <div>
+                                <label class="editable"><input id="widthAutoCheckbox" type="checkbox" data-applyvalue="widthAuto" checked="{{widthAuto}}"> auto</label>
+                            </div>
                             <div title="Supported only in juicy-tile-grid with grid layout.">
                                 <div disabled?="{{ editedTiles.tagName == 'JUICY-TILE-LIST' || layout=='absolute'}}">
                                     <label class="editable"><input id="widthFlexibleCheckbox" type="checkbox" data-applyvalue="widthFlexible" checked="{{widthFlexible}}"> flexible</label>
                                 </div>
                             </div>
-                            <hr>
+                            <div class="description">
+                                Actual width: <span>{{actualWidth}}</span>
+                            </div>
+                            <hr />
                             <div class="button-column">
                                 <button value="100%" on-click="{{setValueFromButton}}" disabled?="{{widthAuto}}">100%</button>
                                 <button value="75%" on-click="{{setValueFromButton}}" disabled?="{{widthAuto}}">75%</button>
@@ -491,13 +506,18 @@
                         <div class="expandable">
                             <button class="editable" on-click="{{heightIncrease}}" disabled?="{{heightAuto}}">+</button>
                             <button class="editable" on-click="{{heightDecrease}}" disabled?="{{heightAuto}}">-</button>
-                            <label class="editable"><input id="heightAutoCheckbox" type="checkbox" data-applyvalue="heightAuto" checked="{{heightAuto}}"> auto</label>
+                            <div>
+                                <label class="editable"><input id="heightAutoCheckbox" type="checkbox" data-applyvalue="heightAuto" checked="{{heightAuto}}"> auto</label>
+                            </div>
                             <div title="Supported only in juicy-tile-grid with grid layout.">
                                 <div disabled?="{{ editedTiles.tagName == 'JUICY-TILE-LIST' || layout=='absolute'}}">
                                     <label class="editable"><input id="heightFlexibleCheckbox" type="checkbox" data-applyvalue="heightFlexible" checked="{{heightFlexible}}"> flexible</label>
                                 </div>
                             </div>
-                            <hr>
+                            <div class="description">
+                                Actual height: <span>{{actualHeight}}</span>
+                            </div>
+                            <hr />
                             <div class="button-column">
                                 <button value="100%" on-click="{{setValueFromButton}}" disabled?="{{widthAuto}}">100%</button>
                                 <button value="75%" on-click="{{setValueFromButton}}" disabled?="{{widthAuto}}">75%</button>
