--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../juicy-color-picker/src/juicy-color-picker.html" />
 <link rel="import" href="juicy-border-picker.html" />
 
-<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists modified editor">
+<polymer-element name="juicy-tile-editor-form" attributes="selectedItems editedTiles tileLists modified">
     <template>
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <style>
