Add support for tight groups Juicy/juicy-tile-grid#12

--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -371,6 +371,10 @@
                     </juicy-popover>
                     <label class="toolbar-label">Gutter</label>
                 </div>
+
+                <div class="toolbar-item" disabled?="{{!isContainer}}" data-applyvalue="tightGroup">
+                  <label class="editable"><input id="tightGroupCheckbox" type="checkbox" data-applyvalue="tightGroup" data-hardrefresh="true" checked="{{tightGroup}}"> tight</label>
+                </div>
             </div>
 
             <div class="editableGroup">
