--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -5,7 +5,7 @@
   <title>&lt;juicy-tile-editor&gt; for grid</title>
   <link rel="stylesheet" href="http://juicy.github.io/github-markdown-css/github-markdown.css">
 
-  <!-- Importing Web Component's Polyfill 
+  <!-- Importing Web Component's Polyfill
   <script src="../../platform/platform.js"></script>
   <link rel="import" href="../../polymer/polymer.html">-->
 
@@ -54,13 +54,10 @@
 
     juicy-tile-grid>:nth-child(4) {
       background:gray;
-      overflow:auto;
     }
 
     juicy-tile-grid>:nth-child(5) {
       background:orange;
-      max-height: 100px;
-      overflow:auto;
     }
 
     #aboveOverlay {
@@ -68,6 +65,7 @@
       z-index: 100;
     }
     .markdown-body div h4,
+    .markdown-body section h4,
     .markdown-body juicy-tile-grid div p{
       margin: 0;
     }
@@ -108,16 +106,21 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     <div>
       <h4>2</h4>
         <p>
-            <code>heightFlexible: true</code>Dynamically change height after tile was packed.
+            <code>heightDynamic: true</code>Dynamically change height after tile was packed.
             <button onclick="addMore( this )">Add more content</button>
             <div id="ieHierarchyRequestErrorWorkaround"></div>
         </p>
     </div>
     <section>
-        <p>3: <code>widthFlexible: true</code></p>
+      <h4>3</h4>
+      <p>
+          <code>heightDynamic: true</code>Dynamically change height after tile was packed.
+          <button onclick="addMore2( this )">Add more content</button>
+          <div id="ieHierarchyRequestErrorWorkaround2"></div>
+      </p>
     </section>
     <div>
-        4
+      4
     </div>
     <div>
         5
@@ -175,33 +178,35 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     editingMode: true,
     setup:{
       "gutter": 25,
+      "width": 1000,
       "items": [
         {
           "id": 0,
           "priority": 0.9,
-          "height": 200,
-          "width": 200
+          "height": 100,
+          "width": 500-26/2
         },
         {
           "id": 1,
           "priority": 0.8,
           "height": 100,
-          "width": 200,
+          "width": 500-26/2,
           "widthFlexible": true
         },
         {
           "id": 2,
           "priority": 0.7,
-          "height": 100,
-          "heightFlexible": true,
-          "width": 200,
+          "height": 50,
+          "heightDynamic": true,
+          "width": "50%",
           "widthFlexible": true
         },
         {
           "id": 3,
           "priority": 0.6,
           "height": 50,
-          "width": 200,
+          "width": "50%",
+          "heightDynamic": true,
           "widthFlexible": true
         },
         {
@@ -242,7 +247,6 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         }
       ],
       "name": "root",
-      "width": 553.5,
       "heightAuto": true
     },
     setup2: {
@@ -290,14 +294,22 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
   });
 
 
-  var addMore = function( button ){
-      // var newOne = button.ownerDocument.createElement("div");
-      // newOne.innerHTML = "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
-      // button.parentNode.appendChild( newOne );
-      // With !<3 to IE
-      document.getElementById("ieHierarchyRequestErrorWorkaround").innerHTML += 
-          "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
-  };
+    var addMore = function( button ){
+        // var newOne = button.ownerDocument.createElement("div");
+        // newOne.innerHTML = "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+        // button.parentNode.appendChild( newOne );
+        // With !<3 to IE
+        document.getElementById("ieHierarchyRequestErrorWorkaround").innerHTML +=
+            "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+    };
+      var addMore2 = function( button ){
+          // var newOne = button.ownerDocument.createElement("div");
+          // newOne.innerHTML = "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+          // button.parentNode.appendChild( newOne );
+          // With !<3 to IE
+          document.getElementById("ieHierarchyRequestErrorWorkaround2").innerHTML +=
+              "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+      };
 </script>
 </article>
 
