Adjust demos to smaller screens,
expand setups, to make them more readable,
update README, change captions

--- a/examples/juicy-tile-grid/menu-content.html
+++ b/examples/juicy-tile-grid/menu-content.html
@@ -1,5 +1,6 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>&lt;juicy-tile-editor&gt; for grid</title>
@@ -66,25 +67,25 @@
         }
     </style>
 </head>
+
 <body>
     <article class="markdown-body">
-        <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=fork&amp;count=true&amp;size=medium"
-                allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=watch&amp;count=true&amp;size=medium"
-                allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=fork&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
+        <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=watch&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
 
         <template bind>
             <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
             <p>
                 This example shows how to set up static menu section and content secion with dymanic height and flexible width.
             </p>
-            <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
+            <label>
+                <input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
             <template if="{{editingMode}}">
                 <div id="aboveOverlay">
                     <juicy-tile-editor selectionmode></juicy-tile-editor>
                 </div>
                 <script>
-                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
+                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function(e) {
                         e.target.templateInstance.model.editingMode = false;
                     });
                 </script>
@@ -94,10 +95,10 @@
             <juicy-tiles-setup-sync storedvalue="{{setup}}"></juicy-tiles-setup-sync>
             <juicy-tile-grid id="st1" setup="[[setup]]">
                 <div>
-                    <small>Static 25%</small>
+                    <small>Static width 25%</small>
                 </div>
                 <div>
-                    <small>Flexible 75%, Dynamic height</small>
+                    <small>Flexible width 75%, Dynamic height</small>
                 </div>
                 <div>
                     <h1>Menu</h1>
@@ -136,9 +137,95 @@
         <script type="text/javascript">
             model = {
                 editingMode: true,
-                setup: { "id": "root", "direction": "rightDown", "gutter": 25, "items": [{ "gutter": 0, "items": [{ "width": "100%", "height": 25, "priority": 0.5, "id": "0", "itemName": "Caption", "hidden": false }, { "width": "100%", "height": 31, "priority": 0.3673469387755103, "id": "2", "itemName": "Menu", "hidden": false, "heightAuto": true }, { "width": "100%", "height": 25, "priority": 0.3148688046647231, "id": "3", "itemName": "Add row", "hidden": false, "heightAuto": false }, { "width": "100%", "height": 25, "priority": 0.269887546855477, "id": "4", "itemName": "Remove row", "hidden": false, "heightAuto": false }, { "width": "100%", "height": 25, "priority": 0.23133218301898031, "id": "5", "itemName": "Modify row", "hidden": false, "heightAuto": false }], "id": "root_0", "priority": 0.5, "width": "25%", "height": 250, "hidden": false, "itemName": "Group 1", "heightAuto": false }, { "gutter": 0, "items": [{ "width": "100%", "height": 25, "priority": 0.4285714285714286, "id": "1", "itemName": "Caption", "hidden": false }, { "width": "100%", "height": 335, "priority": 0.19828472830198315, "id": "6", "itemName": "Table", "hidden": false, "heightDynamic": true, "heightAuto": true, "widthFlexible": true }], "id": "root_1", "priority": 0.4285714285714286, "width": "75%", "height": 128, "hidden": false, "itemName": "Group 2", "widthFlexible": true, "heightDynamic": true }], "width": 1000, "heightAuto": true, "itemName": "root" }
+                setup: {
+                    "id": "root",
+                    "direction": "rightDown",
+                    "gutter": 25,
+                    "items": [{
+                        "gutter": 0,
+                        "items": [{
+                            "width": "100%",
+                            "height": 25,
+                            "priority": 0.5,
+                            "id": "0",
+                            "itemName": "Caption",
+                            "hidden": false
+                        }, {
+                            "width": "100%",
+                            "height": 31,
+                            "priority": 0.3673469387755103,
+                            "id": "2",
+                            "itemName": "Menu",
+                            "hidden": false,
+                            "heightAuto": true
+                        }, {
+                            "width": "100%",
+                            "height": 25,
+                            "priority": 0.3148688046647231,
+                            "id": "3",
+                            "itemName": "Add row",
+                            "hidden": false,
+                            "heightAuto": false
+                        }, {
+                            "width": "100%",
+                            "height": 25,
+                            "priority": 0.269887546855477,
+                            "id": "4",
+                            "itemName": "Remove row",
+                            "hidden": false,
+                            "heightAuto": false
+                        }, {
+                            "width": "100%",
+                            "height": 25,
+                            "priority": 0.23133218301898031,
+                            "id": "5",
+                            "itemName": "Modify row",
+                            "hidden": false,
+                            "heightAuto": false
+                        }],
+                        "id": "root_0",
+                        "priority": 0.5,
+                        "width": "25%",
+                        "height": 250,
+                        "hidden": false,
+                        "itemName": "Group: Side menu",
+                        "heightAuto": false
+                    }, {
+                        "gutter": 0,
+                        "items": [{
+                            "width": "100%",
+                            "height": 25,
+                            "priority": 0.4285714285714286,
+                            "id": "1",
+                            "itemName": "Caption",
+                            "hidden": false,
+                            "widthFlexible": true
+                        }, {
+                            "width": "100%",
+                            "height": 335,
+                            "priority": 0.19828472830198315,
+                            "id": "6",
+                            "itemName": "Table",
+                            "hidden": false,
+                            "heightDynamic": true,
+                            "heightAuto": true,
+                            "widthFlexible": true
+                        }],
+                        "id": "root_1",
+                        "priority": 0.4285714285714286,
+                        "width": "75%",
+                        "height": 128,
+                        "hidden": false,
+                        "itemName": "Group: dynamic content",
+                        "widthFlexible": true,
+                        "heightDynamic": true
+                    }],
+                    "width": 500,
+                    "heightAuto": true,
+                    "itemName": "root"
+                }
             };
-            document.addEventListener("polymer-ready", function () {
+            document.addEventListener("polymer-ready", function() {
                 document.querySelector("template").bindingDelegate = new PolymerExpressions();
                 document.querySelector("template").model = model;
             });
@@ -165,4 +252,5 @@
         </script>
     </article>
 </body>
+
 </html>
